tests/should_fail/for_destructure_tuple_on_string_list.nv
module test
// for destructure: tuple pattern on list of Strings
let xs: [String] = ["a", "b", "c"]
for (a, b) in xs {
    println(a)
}
